<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" /><!-- newest -->
    <!-- Newest, Oldest -->
    <!-- newest,oldest -->
    <!-- order by -->
    <!-- Order By -->

    <ListPreference
        android:defaultValue="@string/settings_category_by_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_category_key"
        android:title="@string/settings_category_label" /><!--technology -->
    <!-- Politics, Technology, Entertainment, Sports, Health -->
    <!-- politics, technology, entertainment, sports, health -->
    <!-- q -->
    <!-- Category -->


</PreferenceScreen>